{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 194,
  "lineage": "e99adb39-d99e-8b09-8924-a0d4c212c3ba",
  "resources": [
    {
      "module": "module.tf-igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:567090471911:internet-gateway/igw-032f44d55e16d0830",
            "id": "igw-032f44d55e16d0830",
            "owner_id": "567090471911",
            "tags": {
              "Name": "Project-IGW"
            },
            "tags_all": {
              "Name": "Project-IGW"
            },
            "vpc_id": "vpc-0b565191c1f22c643"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db7a80a9c2cfb76c",
            "arn": "arn:aws:ec2:us-west-1:567090471911:instance/i-0eb274c9caa42c8fe",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb274c9caa42c8fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "Terraform-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f519ef2fa4f5dfad",
            "private_dns": "ip-10-0-0-181.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.181",
            "public_ip": "54.215.133.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090f62f801719ab22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0025739d70b42efc8",
            "tags": {
              "Name": "Public-Instance-0"
            },
            "tags_all": {
              "Name": "Public-Instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088d2cf4d5b08132f"
            ]
          },
          "dependencies": [
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-security-group.aws_security_group.sg_pub",
            "module.tf-subnet.aws_subnet.subnet-pub",
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:567090471911:route-table/rtb-0674cd878f7aafe77",
            "id": "rtb-0674cd878f7aafe77",
            "owner_id": "567090471911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032f44d55e16d0830",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b565191c1f22c643"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-igw.aws_internet_gateway.igw",
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b450f745b006747",
            "route_table_id": "rtb-0674cd878f7aafe77",
            "subnet_id": "subnet-0025739d70b42efc8"
          },
          "dependencies": [
            "module.tf-igw.aws_internet_gateway.igw",
            "module.tf-route-table.aws_route_table.public_rt",
            "module.tf-subnet.aws_subnet.subnet-pub",
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:567090471911:security-group/sg-088d2cf4d5b08132f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088d2cf4d5b08132f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "terraform-20240612014802900900000001",
            "name_prefix": "terraform-",
            "owner_id": "567090471911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-sg"
            },
            "tags_all": {
              "Name": "Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b565191c1f22c643"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:567090471911:subnet/subnet-0025739d70b42efc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0025739d70b42efc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "567090471911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Sub"
            },
            "tags_all": {
              "Name": "public-Sub"
            },
            "vpc_id": "vpc-0b565191c1f22c643"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:567090471911:vpc/vpc-0b565191c1f22c643",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7226429d47790d6",
            "default_route_table_id": "rtb-08c7375b60447f7ad",
            "default_security_group_id": "sg-01bcf3ac986a33571",
            "dhcp_options_id": "dopt-03f51f43087d86347",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b565191c1f22c643",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c7375b60447f7ad",
            "owner_id": "567090471911",
            "tags": {
              "Name": "Project"
            },
            "tags_all": {
              "Name": "Project"
            }
          }
        }
      ]
    }
  ]
}